--- a/Views/Patients/AdjustFace.cshtml
+++ b/Views/Patients/AdjustFace.cshtml
@@ -79,7 +79,7 @@
     <script>
         const MASTERPIECE_X_API_KEY = "zpka_7a8b1beb401e40deaea97a1dd6c794dc_1d431f38"; // 🔹 Replace with your API key
         let patientId = @Model.Id;
-        let imageUrl = '@Model.FrontImageUrl'; // 🔹 Ensure this is not null
+        let imageUrl = 'https://patients-tree.s3.amazonaws.com/patients/6101c10c-5f1e-4996-9d93-60de9c17d5c2_front.jpg'; // 🔹 Ensure this is not null
 
         if (!imageUrl || imageUrl.trim() === "") {
             alert("⚠️ No se encontró imagen frontal. Asegúrate de subir una imagen.");
@@ -109,6 +109,7 @@
                 });
 
                 const data = await response.json();
+                console.log(data)
                 if (!data.requestId) {
                     throw new Error("❌ Error al enviar imagen a Masterpiece X");
                 }
